--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <script src="js/core.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
+    <p title="Text">By default, <kbd>Space</kbd> scrolls the page a bit, but it is also used to move the player in the canvas game. Lets see what happens</p>
+
 </body>
 </html>
