layout cropped, save image bg bug

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="js/core.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
     <p title="Text">By default, <kbd>Space</kbd> scrolls the page a bit, but it is also used to move the player in the canvas game. Lets see what happens</p>
-
+    <button onclick="screenshot()">Click me</button>
 </body>
 </html>
